# MCP-Projects

./: README.md
.github/workflows/: secret-scan.yml
1password-akv-sync/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
1password-akv-sync/src/op_akv_sync/: server.py
1password-akv-sync/src/op_akv_sync/clients/: __init__.py  akv_client.py  op_client.py
1password-akv-sync/src/op_akv_sync/tools/: __init__.py  akv.py  onepassword.py  sync.py
1password-akv-sync/tests/: conftest.py  test_tools.py
