[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "op-akv-sync"
version = "0.1.0"
description = "MCP server to sync secrets from 1Password to Azure Key Vault with ESO manifest generation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "onepassword-sdk>=0.1.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-identity>=1.17.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
op-akv-sync = "op_akv_sync.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/op_akv_sync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
